--- a/app/assets/stylesheets/frame1.css
+++ b/app/assets/stylesheets/frame1.css
@@ -17,8 +17,9 @@ input {
     justify-content: space-around
 }
 
+
 .content1 li {
-    font-size: 4vw;
+    font-size: 3vw;
 }
 
 #wrap1 {
@@ -27,5 +28,10 @@ input {
 
 
 #leve1 {margin-left: 2vw;}
-#leve2 {margin-left: 4vw;}
+.leve2 {margin-left: 4vw;}
+.leve3 {margin-left: 6vw;}
+
 li {margin: 1vw;}
+#to_root {margin-bottom: 2vw;}
+
+.bold {font-weight: bold;}
