--- a/app/views/frame1/show1.html.erb
+++ b/app/views/frame1/show1.html.erb
@@ -59,7 +59,7 @@
 
         if (target.length < 100) {
             target = target.replace(/\s+/g, '');
-            window.location.href = `/${String(target)}`
+            window.location.href = `/qqq/${String(target)}`
         }
     } )
 
