--- a/app/views/frame1/show3.html.erb
+++ b/app/views/frame1/show3.html.erb
@@ -57,11 +57,11 @@
 
          if (target.length < 100) {
              target = target.replace(/\s+/g, '');
-             window.location.href = `/${leve1_name}/${leve2_name}/${target}`
+             window.location.href = `/qqq/${leve1_name}/${leve2_name}/${target}`
          }
      } )
 
-    leve1.addEventListener('click', () => window.location.href = `/${leve1_name}`)
+    leve1.addEventListener('click', () => window.location.href = `/qqq/${leve1_name}`)
 
 
 </script>
