--- a/app/views/frame1/show4.html.erb
+++ b/app/views/frame1/show4.html.erb
@@ -43,8 +43,8 @@
     const level2_name = document.querySelector(".leve2").innerHTML.replace(/\s+/g, '')
     const level2      = document.querySelector(".leve2")
 
-    level1.addEventListener('click', ()=> window.location.href =  `/${level1_name}`)
-    level2.addEventListener('click', ()=> window.location.href =  `/${level1_name}/${level2_name}`)
+    level1.addEventListener('click', ()=> window.location.href =  `/qqq/${level1_name}`)
+    level2.addEventListener('click', ()=> window.location.href =  `/qqq/${level1_name}/${level2_name}`)
 
 
 </script>
