--- a/app/views/frame1/show3.html.erb
+++ b/app/views/frame1/show3.html.erb
@@ -20,24 +20,36 @@
 
         <div class="leve3">
             <ul>
-
-
-
                     <% @categories_L3.each do |el| %>
                 <li>
                     <%= el.name %>
                 </li>
                     <% end %>
-
-
-
-
             </ul>
         </div>
+
+        <div class="leve2">
+            <% @rest_categories_level2.each do |item|%>
+            <p>
+            <%= item.name %>
+            </p>
+            <% end %>
+        </div>
+
+
+        <div class="level1">
+            <% @rest_categories_level1.each do |item|%>
+            <p>
+            <%= item.name %>
+            </p>
+            <% end %>
+        </div>
+
+
+
     </div>
 
-
-
+    
 
 
 
