--- a/app/views/frame1/show2.html.erb
+++ b/app/views/frame1/show2.html.erb
@@ -43,34 +43,17 @@
     <table id='table'>
         <tr class="bold">
             <td class="td_top">название
-                <button id="but_name_top" class="sort"><svg width="11" height="11" viewBox="0 0 11 11" xmlns="http://www.w3.org/2000/svg"><line x1="6" y1="11" x2="6" y2="0" stroke="black"/><line x1="0" y1="5" x2="6" y2="0" stroke="black"/><line x1="11" y1="5" x2="6" y2="0" stroke="black"/></svg>
-                </button>
-                <button id="but_name_bottom" class="sort"><svg width="11" height="11" viewBox="0 0 11 11" xmlns="http://www.w3.org/2000/svg"><line x1="6" y1="11" x2="6" y2="0" stroke="black"/><line x1="0" y1="6" x2="6" y2="11" stroke="black"/><line x1="11" y1="6" x2="6" y2="11" stroke="black"/></svg>
-                </button>
+                <button id="but_name_top" class="sort"></button>
+                <button id="but_name_bottom" class="sort"></button>
             </td> 
             <td class="td_top">ед.изм.</td>
             <td class="td_top">цена розн.
-                 <button id="but_price_retail_top" class="sort"><svg width="11" height="11" viewBox="0 0 11 11" xmlns="http://www.w3.org/2000/svg"><line x1="6" y1="11" x2="6" y2="0" stroke="black"/><line x1="0" y1="5" x2="6" y2="0" stroke="black"/><line x1="11" y1="5" x2="6" y2="0" stroke="black"/></svg>
-                </button>
-                <button id="but_price_retail_bottom" class="sort">
-                
-                
-                
-                <svg width="11" height="11" viewBox="0 0 11 11" xmlns="http://www.w3.org/2000/svg">
-                    <line x1="6" y1="11" x2="6" y2="0" stroke="black"/>
-                    <line x1="0" y1="6" x2="6" y2="11" stroke="black"/>
-                    <line x1="11" y1="6" x2="6" y2="11" stroke="black"/>
-                </svg>
-                
-                
-                
-                </button>
+                <button id="but_price_retail_top" class="sort"></button>
+                <button id="but_price_retail_bottom" class="sort"></button>
             </td>
             <td class="td_top">цена опт.
-                 <button id="but_price_wholesale_top" class="sort"><svg width="11" height="11" viewBox="0 0 11 11" xmlns="http://www.w3.org/2000/svg"><line x1="6" y1="11" x2="6" y2="0" stroke="black"/><line x1="0" y1="5" x2="6" y2="0" stroke="black"/><line x1="11" y1="5" x2="6" y2="0" stroke="black"/></svg>
-                </button>
-                <button id="but_price_wholesale_bottom" class="sort"><svg width="11" height="11" viewBox="0 0 11 11" xmlns="http://www.w3.org/2000/svg"><line x1="6" y1="11" x2="6" y2="0" stroke="black"/><line x1="0" y1="6" x2="6" y2="11" stroke="black"/><line x1="11" y1="6" x2="6" y2="11" stroke="black"/></svg>
-                </button>
+                 <button id="but_price_wholesale_top" class="sort"></button>
+                <button id="but_price_wholesale_bottom" class="sort"></button>
             </td>
             <td class="td_top">объём опта</td>
             <td class="td_top">компания</td>
