--- a/app/views/materials/new.html.erb
+++ b/app/views/materials/new.html.erb
@@ -23,7 +23,7 @@
        
         <div>
             <%# <%= form_with model: @material do |form|%>  
-            <%= form_with do |form| %>
+            <%= form_with model: Material.new do |form| %>
 
                 <div>
                     <%= form.label :"категория" %><br>
